# llm-chat-bot-turismo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
chat/: chat_simple.py  prueba.py
notebook/: chat.ipynb
tests/: test_.py
